<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/nav_categories"
        android:icon="@drawable/ic_category"
        android:title="@string/nav_categories" />
    <item
        android:id="@+id/nav_products"
        android:icon="@drawable/ic_product"
        android:title="@string/nav_products" />
    <item
        android:id="@+id/nav_orders"
        android:icon="@drawable/ic_orders"
        android:title="@string/nav_orders" />
    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_history"
        android:title="@string/nav_history" />

    <item
        android:id="@+id/nav_report"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/nav_report" />

    <item
        android:id="@+id/nav_customers"
        android:icon="@drawable/ic_people"
        android:title="Customers" />
    <item
        android:id="@+id/nav_sync"
        android:icon="@drawable/ic_dashboard"
        android:title="Backup &amp; Sync" />
    <item
        android:id="@+id/nav_expense"
        android:icon="@drawable/ic_money"
        android:title="Pengeluaran" />
</menu>
